chore: apply security report remediations